<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="listings"
            type="edu.aku.hassannaqvi.hfplisting.models.Listings" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.hfplisting.ui.sections.SectionAActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/CustomToolbarTheme"
            app:popupTheme="@style/CustomPopupTheme"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:title="Cluster Selection"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/GrpName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <!-- hh01  Input   -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/fldGrpCVhh01"
                        style="@style/cardView">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/info"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/clusteridentification_mainheading"
                                android:visibility="gone" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bottom"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/hh01a" />

                                <androidx.appcompat.widget.AppCompatSpinner
                                    android:id="@+id/hh01a"
                                    style="@style/spinner"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:hint="@string/hh01a" />
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bottom"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/hh01b" />

                                <androidx.appcompat.widget.AppCompatSpinner
                                    android:id="@+id/hh01b"
                                    style="@style/spinner"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:hint="@string/hh01b" />
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bottom"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/hh01c" />

                                <androidx.appcompat.widget.AppCompatSpinner
                                    android:id="@+id/hh01c"
                                    style="@style/spinner"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:hint="@string/hh01c" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/ebMsg"
                                style="null"
                                android:layout_width="match_parent"
                                android:layout_height="18dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:background="@android:color/transparent"
                                android:fontFamily="@font/roboto"
                                android:paddingTop="0dp"
                                android:paddingBottom="0dp"
                                android:textColor="@color/redLight"
                                android:textSize="14dp"
                                android:visibility="visible" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <!-- hh03  Radio   -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/fldGrpCVhh03"
                        style="@style/cardView"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bottom"
                                android:orientation="horizontal">

                                <TextView
                                    style="@style/quesNum"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/Q_hh03" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/hh03" />

                            </LinearLayout>

                            <RadioGroup
                                android:id="@+id/hh03"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/hh031"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked="@{listings.hh03.equals(`1`)}"
                                    android:onClick="@{()->listings.setHh03(`1`)}"
                                    android:text="@string/hh031" />

                                <RadioButton
                                    android:id="@+id/hh032"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked="@{listings.hh03.equals(`2`)}"
                                    android:onClick="@{()->listings.setHh03(`2`)}"
                                    android:text="@string/hh032" />
                            </RadioGroup>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <!--EndButton LinearLayout-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="24dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/openForm"
                            style="@style/button"
                            android:layout_marginStart="12dp"
                            android:background="@drawable/all_round_corners"
                            android:backgroundTint="@color/colorAccent"
                            android:enabled="false"
                            android:fontFamily="@font/roboto"
                            android:onClick="btnContinue"
                            android:text="@string/start_line_listing" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</layout>